--- a/temp.html
+++ b/temp.html
@@ -36,7 +36,9 @@
         <p class="hello1">Vous trouverez ici un aperçu de mes projets, ainsi que mon cv.</p>
         <p class="hello2">J'éspère qu'il vous plaira.</p>
         <p class="hello3"> Bonne visite !</p>
-        <h1 class="nom">MENEN SZYMON</h1>
+        <h1 class="nom">MENEN </h1>
+        <h1 class="nom">SZYMON</h1>
+     
         <h3 class="fonction">Full-stack developper junior</h3>
       </article>
   </section>
