web_version_presque_responsive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </style>
     <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/temp.css">
+    <link rel="stylesheet" href="./assets/responsive.css">
     <title>I am just a baby junior</title>
 </head>
 <body>
