gallerie boutons dans portfolio

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
         <div class="div2">
           <button type="submit">
-            <a href="">🚧En construction</a>
+            <a href="https://simonemenou.github.io/Boutons/">GALLERIE DE BOUTONS</a>
            </button>
         </div>
         <div class="div3">
