--- a/index2Test.html
+++ b/index2Test.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/style_base.css">
     <link rel="stylesheet" href="./assets/responsive_screen_pc_small.css">
     <link rel="stylesheet" href="./assets/responsive_mobile.css">
-    <title>I am just a baby junior</title>
+    <title>Test def</title>
 </head>
 <body>
     <div class="container">
